--- a/ex14.tex
+++ b/ex14.tex
@@ -84,7 +84,7 @@ There's two different kinds of "breaking" in this program:
     and \func{isblank}.  Use the other similar functions to
     print out only digits or other characters.
 \item Go read about how different people like to format their
-    functions.  Never use the "K&R syntax" as it's antiquated and
+    functions.  Never use the "K\&R syntax" as it's antiquated and
     confusing, but understand what it's doing in case you run
     into someone who likes it.
 \end{enumerate}
