Better rpm command.

--- a/ex0.tex
+++ b/ex0.tex
@@ -51,7 +51,7 @@ like Fedora:
 
 \begin{code}{Installing Requirements On Fedora}
 \begin{lstlisting}
-$ sudo yum groupinstall development-tools
+$ su -c yum groupinstall development-tools
 \end{lstlisting}
 \end{code}
 
