Don't mention malloc yet.

--- a/ex15.tex
+++ b/ex15.tex
@@ -162,7 +162,7 @@ and it's a fundamental aspect of C: pointers and arrays are the same thing (most
 There are four primary useful things you do with pointers in C code:
 
 \begin{enumerate}
-\item Ask the OS for a chunk of memory using \func{malloc} and use a pointer
+\item Ask the OS for a chunk of memory use a pointer
     to work with it.  This includes strings and something you haven't seen
     yet, \ident{structs}.
 \item Passing large blocks of memory (like strings and arrays) to functions
