Ex16 done, need to work on explaining structures more.

--- a/ex15.tex
+++ b/ex15.tex
@@ -8,7 +8,9 @@ ways to use pointers then they're fairly easy.
 
 To demonstrate pointers in a way we can talk about them, I've
 written a frivolous program that prints a group of people's
-ages in three different ways:
+ages in three different ways:\footnote{Remember, in this book you type
+in programs you might not understand, and then try figure them
+out before I explain what's going on.}
 
 \begin{code}{ex15.c}
 << d['code/ex15.c|pyg|l'] >>
