Not really doing arrays of structs yet.

--- a/ex16.tex
+++ b/ex16.tex
@@ -1,9 +1,8 @@
 \chapter{Exercise 16: Structs And Pointers To Them}
 
-In this exercise you'll learn how to make a \ident{struct},
-create an array of them, point a pointer at them, and use them
-to make sense of internal memory structures.  I'll also apply
-the knowledge of pointers from the last exercise and get you
+In this exercise you'll learn how to make a \ident{struct}, point a pointer
+at them, and use them to make sense of internal memory structures.  I'll also
+apply the knowledge of pointers from the last exercise and get you
 constructing these structures from raw memory using \func{malloc}.
 
 As usual, here's the program we'll talk about, so type it in and
