Mention the includes in the break down.

--- a/ex16.tex
+++ b/ex16.tex
@@ -19,6 +19,8 @@ going to give you a guide through the program based on the
 parts it contains, and your job is to write out what each line does.
 
 \begin{description}
+\item [includes] I include some new header files here to gain
+    access to some new functions.  What does each give you?
 \item [struct Person] This is where I'm creating a structure that
     has 4 elements to describe a person.  The final result is a
     new compound type that let's me reference these elements all
