--- a/ex13.tex
+++ b/ex13.tex
@@ -6,7 +6,7 @@ any expression.  Some languages like Python just don't have a
 is about the same thing.  For these languages, \ident{switch-statements} are
 more alternatives to \ident{if-statements} and work the same internally.
 
-The \ident{switch-statement} is actually entirely different and is really "jump
+The \ident{switch-statement} is actually entirely different and is really a "jump
 table".  Instead of random boolean expressions, you can only put expressions
 that result in integers, and these integers are used to calculate jumps from
 the top of the \ident{switch} to the part that matches that value.  Here's some
