Fixed typo in ex2.

--- a/ex2.tex
+++ b/ex2.tex
@@ -70,7 +70,7 @@ in it:
 \end{code}
 
 Save this file as \file{Makefile} in your current directory.  Make
-automatically assumes there's a filed called \file{Makefile} and will
+automatically assumes there's a file called \file{Makefile} and will
 just run it.  Also, \emph{WARNING: Make sure you are only entering TAB
 characters, not mixtures of TAB and spaces.}
 
